chore: simplify example
