# openapigen/_examples/04pagination/openapi.json
@@ -87,85 +87,6 @@
           "task"
         ]
       }
-    },
-    "/tasks2": {
-      "get": {
-        "operationId": "ListTask2",
-        "description": "paginated list task version 2",
-        "parameters": [
-          {
-            "name": "sort",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-                "createdAt",
-                "-createdAt"
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "_meta": {
-                      "type": "object",
-                      "properties": {
-                        "totalCount": {
-                          "type": "integer"
-                        },
-                        "hasMore": {
-                          "type": "boolean"
-                        },
-                        "cursor": {
-                          "type": "string"
-                        }
-                      },
-                      "required": [
-                        "totalCount",
-                        "hasMore",
-                        "cursor"
-                      ],
-                      "additionalProperties": false
-                    },
-                    "data": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Task"
-                      },
-                      "description": "response data of api"
-                    }
-                  },
-                  "required": [
-                    "_meta",
-                    "data"
-                  ],
-                  "additionalProperties": false
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "default error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "task"
-        ]
-      }
     }
   },
   "components": {
